examples/linkerd/ingress-linkerd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkerd-viz
  namespace: linkerd-viz
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - linkerd.example.internal
      secretName: linkerd-viz-tls
  rules:
    - host: linkerd.example.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8084
